# llm-prompt-regression-system

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
app/: evaluator.py  llm_runner.py  prompt_store.py  regression.py
data/: prompt_versions.json  test_cases.json
src/: __init__.py  py.typed
src/cli/: __init__.py  main.py  utils.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  exceptions.py  logging.py
src/data/: __init__.py  loader.py  store.py
src/engine/: __init__.py  analyzer.py  reporter.py  runner.py
src/evaluators/: __init__.py  base.py  composite.py  hashtag.py  registry.py  tone.py  word_count.py
src/models/: __init__.py  schemas.py
src/providers/: __init__.py  base.py  factory.py  groq_provider.py
tests/: __init__.py  conftest.py  test_data.py  test_engine.py  test_evaluators.py  test_models.py
